--- a/gdx-audio/proj/gdx-audio.vcxproj
+++ b/gdx-audio/proj/gdx-audio.vcxproj
@@ -90,12 +90,16 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\src\WavDecoder.cpp" />
+    <ClCompile Include="..\src\WavInputStream.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Mpg123Decoder.h" />
+    <ClInclude Include="..\include\WavDecoder.h" />
     <ClInclude Include="..\incl\Mp3File.h" />
     <ClInclude Include="..\incl\stdafx.h" />
     <ClInclude Include="..\incl\targetver.h" />
+    <ClInclude Include="..\incl\WavInputStream.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
