--- a/gdx-audio/proj/gdx-audio.vcxproj.filters
+++ b/gdx-audio/proj/gdx-audio.vcxproj.filters
@@ -63,7 +63,7 @@
       <Filter>Include</Filter>
     </ClInclude>
     <ClInclude Include="..\incl\WavInputStream.h">
-      <Filter>incl</Filter>
+      <Filter>Include</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
