--- a/gdx-audio/extern/vorbis/vorbis.vcxproj
+++ b/gdx-audio/extern/vorbis/vorbis.vcxproj
@@ -11,18 +11,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{43E30B47-63FB-4009-9F8F-EBE856D844A3}</ProjectGuid>
+    <ProjectGuid>{4A6D5361-5215-4A91-B72C-F5F515C1379E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>gdxaudio</RootNamespace>
+    <RootNamespace>vorbis</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
@@ -37,72 +37,76 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LinkIncremental>false</LinkIncremental>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;GDXAUDIO_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\include;..\incl;..\..\gdx\include;..\extern\mpg123\ports\MSVC++\;..\extern\mpg123\src\libmpg123\;..\extern\vorbis</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\extern\mpg123\ports\MSVC++\2008\Debug\;..\extern\vorbis\Debug;$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libmpg123.lib;gdx.lib;vorbis.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>
+      </PrecompiledHeader>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;GDXAUDIO_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\include;..\incl;..\..\gdx\include;..\extern\mpg123\ports\MSVC++\;..\extern\mpg123\src\libmpg123\;..\extern\vorbis</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\extern\mpg123\ports\MSVC++\2008\Release;..\extern\vorbis\Release;$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libmpg123.lib;gdx.lib;vorbis.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="..\include\Decoder.h" />
-    <None Include="..\incl\OggFile.h" />
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\dllmain.cpp" />
-    <ClCompile Include="..\src\gdx-audio.cpp" />
-    <ClCompile Include="..\src\Mp3File.cpp" />
-    <ClCompile Include="..\src\Mpg123Decoder.cpp" />
-    <ClCompile Include="..\src\stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
-    <ClCompile Include="..\src\VorbisDecoder.cpp" />
-    <ClCompile Include="..\src\WavDecoder.cpp" />
-    <ClCompile Include="..\src\WavInputStream.cpp" />
+    <ClCompile Include="bitwise.c" />
+    <ClCompile Include="block.c" />
+    <ClCompile Include="codebook.c" />
+    <ClCompile Include="floor0.c" />
+    <ClCompile Include="floor1.c" />
+    <ClCompile Include="framing.c" />
+    <ClCompile Include="info.c" />
+    <ClCompile Include="mapping0.c" />
+    <ClCompile Include="mdct.c" />
+    <ClCompile Include="registry.c" />
+    <ClCompile Include="res012.c" />
+    <ClCompile Include="sharedbook.c" />
+    <ClCompile Include="synthesis.c" />
+    <ClCompile Include="vorbisfile.c" />
+    <ClCompile Include="window.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\Mpg123Decoder.h" />
-    <ClInclude Include="..\include\VorbisDecoder.h" />
-    <ClInclude Include="..\include\WavDecoder.h" />
-    <ClInclude Include="..\incl\Mp3File.h" />
-    <ClInclude Include="..\incl\stdafx.h" />
-    <ClInclude Include="..\incl\targetver.h" />
-    <ClInclude Include="..\incl\WavInputStream.h" />
+    <ClInclude Include="asm_arm.h" />
+    <ClInclude Include="backends.h" />
+    <ClInclude Include="block.h" />
+    <ClInclude Include="codebook.h" />
+    <ClInclude Include="codec_internal.h" />
+    <ClInclude Include="config_types.h" />
+    <ClInclude Include="ivorbiscodec.h" />
+    <ClInclude Include="ivorbisfile.h" />
+    <ClInclude Include="lsp_lookup.h" />
+    <ClInclude Include="mdct.h" />
+    <ClInclude Include="mdct_lookup.h" />
+    <ClInclude Include="misc.h" />
+    <ClInclude Include="ogg.h" />
+    <ClInclude Include="os.h" />
+    <ClInclude Include="os_types.h" />
+    <ClInclude Include="registry.h" />
+    <ClInclude Include="window.h" />
+    <ClInclude Include="window_lookup.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
