--- a/tests/gdx-tests/proj/gdx-tests.vcxproj
+++ b/tests/gdx-tests/proj/gdx-tests.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="..\include\IndexBufferObjectShaderTest.h" />
     <ClInclude Include="..\include\MeshMultitextureTest.h" />
     <ClInclude Include="..\include\MipMapTest.h" />
+    <ClInclude Include="..\include\MoveSpriteExample.h" />
     <ClInclude Include="..\include\Mpg123Test.h" />
     <ClInclude Include="..\include\Pong.h" />
     <ClInclude Include="..\include\RotationTest.h" />
